--- a/html/webappapis/scripting/events/event-handler-spec-example.html
+++ b/html/webappapis/scripting/events/event-handler-spec-example.html
@@ -46,4 +46,20 @@ primitives.forEach(function(primitive) {
     t.done()
   });
 });
+var t = async_test("Event handler listeners should be registered when they " +
+                   "are first set to an object value.");
+t.step(function() {
+  var i = 0;
+  var uncalled = "t.step(function() { assert_unreached('First event handler.') })"
+  var button = document.createElement('button');
+  button.addEventListener('click', t.step_func(function () { assert_equals(++i, 1) }), false);
+  button.setAttribute('onclick', uncalled); // event handler listener is registered here
+  button.addEventListener('click', t.step_func(function () { assert_equals(++i, 3) }), false);
+  button.onclick = t.step_func(function () { assert_equals(++i, 2); });
+  button.addEventListener('click', t.step_func(function () { assert_equals(++i, 4) }), false);
+  button.click()
+  assert_equals(button.getAttribute("onclick"), uncalled)
+  assert_equals(i, 4);
+  t.done()
+});
 </script>
