--- a/html/semantics/scripting-1/the-script-element/async_003.htm
+++ b/html/semantics/scripting-1/the-script-element/async_003.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>An async script executes as soon as possible after a download is complete</title>
+        <title>An async script does not block the parser while downloading</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta description="This test ensures an async script executes as soon as possible after a download is complete." />
+        <meta description="This test ensures an async script does not block the parser while downloading." />
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://dev.w3.org/html5/spec/scripting-1.html#attr-script-async"/>
         <script src="/resources/testharness.js"></script>
@@ -12,9 +12,7 @@
     <body>
         <div id=log></div>
         <script type="text/javascript">
-
-
-        var t = async_test("async script executes as soon as possible after a download is complete");
+        var t = async_test("An async script does not block the parser while downloading");
 
         function timeout()
         {
@@ -22,10 +20,11 @@
             t.done();
         }
 
-        var timer = setTimeout(timeout, 5000);
+        var timer = setTimeout(timeout, 4000);
 
-        // In this case the external tags have the 'async' attribute so the parser doesn't block execution
-        // Because of the sleep in the file the second script below executes before the first
+        // In this case the log.py script tag has the 'async' attribute so the parser doesn't block
+        // Therefore the internal script gets called first and adds a '2' to the testresult tag
+        // Then the external script runs log(1) which appends a '1' to the testresult tag
         //
         //  Thus the assert above is to check that the innerHTML == 21
         //
@@ -35,12 +34,13 @@
             var textNode = document.createTextNode(text);
             document.getElementById("testresult").appendChild(textNode);
         }
-
         </script>
 
-        <span style="display : none" id="testresult"></span>
+        <span id="testresult"></span>
 
         <script src="log.py?sec=3&id=1" async></script>
-        <script src="log.py?sec=1&id=2" async></script>
+        <script>
+            log('2');
+        </script>
     </body>
 </html>
