--- a/html/semantics/scripting-1/the-script-element/async_005.htm
+++ b/html/semantics/scripting-1/the-script-element/async_005.htm
@@ -12,8 +12,6 @@
     <body>
  <div id=log></div>
         <script type="text/javascript">
-
-
         var t = async_test("A script element with both async and defer set should execute asynchronously");
 
         function timeout()
@@ -38,10 +36,9 @@
             var textNode = document.createTextNode(text);
             document.getElementById("testresult").appendChild(textNode);
         }
-
         </script>
 
-        <span style="display : none" id="testresult"></span>
+        <span id="testresult"></span>
 
         <script type="text/javascript" src="log.py?sec=1&id=1" defer async></script>
         <script type="text/javascript">log('2');</script>
