--- a/html/semantics/scripting-1/the-script-element/async_007.htm
+++ b/html/semantics/scripting-1/the-script-element/async_007.htm
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>A dynamically created external script executes asynchronously</title>
+        <title>Ordered async script execution when script.async == false</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta description="This test ensures a dynamically created external script executes asynchronously." />
+        <meta description="This test ensures Ordered async script execution when script.async == false" />
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
-        <link rel="help" href="http://dev.w3.org/html5/spec/scripting-1.html#force-async"/>
+        <link rel="help" href="http://dev.w3.org/html5/spec/scripting-1.html#script-processing-src-sync"/>
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-
     </head>
     <body>
         <div id=log></div>
         <script type="text/javascript">
-
-
-        var t = async_test("dynamically created external script executes asynchronously");
+        var t = async_test("Ordered async script execution when script.async == false");
 
         function timeout()
         {
-            t.step(function(){ assert_equals(document.getElementById("testresult").innerHTML, "321")});
+            t.step(function(){ assert_equals(document.getElementById("testresult").innerHTML, "312")});
             t.done();
         }
 
         var timer = setTimeout(timeout, 8000);
 
-        // In this test
-        //  * The third script tag below should execute first
-        //  * Then second 'two' dynamically created script tag should execute since it only has a one second delay
-        //  * Then first 'one' dynamically created script tag should execute since it has a three second delay
+        // In this test both dynamically created scripts have async set to 'false'
+        // So when they are appended they run syncronously
         //
-        //  Thus the assert above is to check that the innerHTML == 321
+        //  Thus the assert above is to check that the innerHTML == 312
         //
         function log(text)
         {
             var textNode = document.createTextNode(text);
             document.getElementById("testresult").appendChild(textNode);
         }
-
         </script>
 
-        <span style="display : none" id="testresult"></span>
+        <span id="testresult"></span>
         <script type="text/javascript">
             var one = document.createElement("script");
             one.src="log.py?sec=3&id=1";
+            one.async = false;
             document.head.appendChild(one);
 
             var two = document.createElement("script");
             two.src="log.py?sec=1&id=2";
+            two.async = false;
             document.head.appendChild(two);
         </script>
         <script type="text/javascript">
