--- a/html/semantics/scripting-1/the-script-element/async_008.htm
+++ b/html/semantics/scripting-1/the-script-element/async_008.htm
@@ -12,8 +12,6 @@
     <body>
         <div id=log></div>
         <script type="text/javascript">
-
-
         var t = async_test("Async script element execution delays the window's load event");
 
         function timeout()
@@ -33,10 +31,9 @@
             var textNode = document.createTextNode(text);
             document.getElementById("testresult").appendChild(textNode);
         }
-
         </script>
 
-        <span style="display : none" id="testresult"></span>
+        <span id="testresult"></span>
         <script type="text/javascript">
             window.addEventListener("load", function() {
                 log("3");
