--- a/html/semantics/forms/textfieldselection/textfieldselection-setSelectionRange.html
+++ b/html/semantics/forms/textfieldselection/textfieldselection-setSelectionRange.html
@@ -22,41 +22,41 @@ test(function() {
     input.setSelectionRange(0,1)
     assert_equals(input.selectionStart, 0, "element.selectionStart should be 0");
     assert_equals(input.selectionEnd, 1, "element.selectionEnd should be 1");
-  },'input setSelectionRange((0,1)');
+  },'input setSelectionRange(0,1)');
   test(function() {
     input.setSelectionRange(0,input.value.length+1)
     assert_equals(input.selectionEnd, input.value.length, "Arguments greater than the length of the value of the text field must be treated as pointing at the end of the text field");
-  },'input setSelectionRange((0,input.value.length+1)');
+  },'input setSelectionRange(0,input.value.length+1)');
   test(function() {
     input.setSelectionRange(2,2)
     assert_equals(input.selectionStart, 2, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
     assert_equals(input.selectionEnd, 2, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
-  },'input setSelectionRange((2,2)');
+  },'input setSelectionRange(2,2)');
   test(function() {
     input.setSelectionRange(2,1)
     assert_equals(input.selectionStart, 1, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
     assert_equals(input.selectionEnd, 1, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
-  },'input setSelectionRange((2,1)');
+  },'input setSelectionRange(2,1)');
   test(function() {
     input.setSelectionRange(0,1,"backward")
     assert_equals(input.selectionDirection, "backward", 'The direction of the selection must be set to backward if direction is a case-sensitive match for the string "backward"');
-  },'input setSelectionRange((0,1,"backword")');
+  },'input setSelectionRange(0,1,"backaord")');
   test(function() {
     input.setSelectionRange(0,1,"forward")
     assert_equals(input.selectionDirection, "forward", 'The direction of the selection must be set to forward if direction is a case-sensitive match for the string "forward"');
-  },'input setSelectionRange((0,1,"forward")');
+  },'input setSelectionRange(0,1,"forward")');
   test(function() {
     input.setSelectionRange(0,1,"none")
     assert_equals(input.selectionDirection, "none", 'The direction of the selection must be set to forward if direction is a case-sensitive match for the string "none"');
-  },'input setSelectionRange((0,1,"none")');
+  },'input setSelectionRange(0,1,"none")');
   test(function() {
     input.setSelectionRange(0,1,"hoge")
     assert_equals(input.selectionDirection, "none", "otherwise");
-  },'input setSelectionRange((0,1,"hoge")');
+  },'input setSelectionRange(0,1,"hoge")');
   test(function() {
     input.setSelectionRange(0,1,"BACKWARD")
     assert_equals(input.selectionDirection, "none", "selectionDirection should be 'none'");
-  },'input setSelectionRange((0,1,"BACKWARD")');
+  },'input setSelectionRange(0,1,"BACKWARD")');
   test(function() {
     input.setSelectionRange(0,1)
     assert_equals(input.selectionDirection, "none", "if the argument is omitted");
@@ -103,41 +103,41 @@ test(function() {
     textarea.setSelectionRange(0,1)
     assert_equals(textarea.selectionStart, 0, "element.selectionStart should be 0");
     assert_equals(textarea.selectionEnd, 1, "element.selectionEnd should be 1");
-  },'textarea setSelectionRange((0,1)');
+  },'textarea setSelectionRange(0,1)');
   test(function() {
     textarea.setSelectionRange(0,textarea.value.length+1)
     assert_equals(textarea.selectionEnd, textarea.value.length, "Arguments greater than the length of the value of the text field must be treated as pointing at the end of the text field");
-  },'textarea setSelectionRange((0,textarea.value.length+1)');
+  },'textarea setSelectionRange(0,textarea.value.length+1)');
   test(function() {
     textarea.setSelectionRange(2,2)
     assert_equals(textarea.selectionStart, 2, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
     assert_equals(textarea.selectionEnd, 2, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
-  },'textarea setSelectionRange((2,2)');
+  },'textarea setSelectionRange(2,2)');
   test(function() {
     textarea.setSelectionRange(2,1)
     assert_equals(textarea.selectionStart, 1, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
     assert_equals(textarea.selectionEnd, 1, "If end is less than or equal to start then the start of the selection and the end of the selection must both be placed immediately before the character with offset end");
-  },'textarea setSelectionRange((2,1)');
+  },'textarea setSelectionRange(2,1)');
   test(function() {
     textarea.setSelectionRange(0,1,"backward")
     assert_equals(textarea.selectionDirection, "backward", 'The direction of the selection must be set to backward if direction is a case-sensitive match for the string "backward"');
-  },'textarea setSelectionRange((0,1,"backword")');
+  },'textarea setSelectionRange(0,1,"backword")');
   test(function() {
     textarea.setSelectionRange(0,1,"forward")
     assert_equals(textarea.selectionDirection, "forward", 'The direction of the selection must be set to forward if direction is a case-sensitive match for the string "forward"');
-  },'textarea setSelectionRange((0,1,"forward")');
+  },'textarea setSelectionRange(0,1,"forward")');
   test(function() {
     textarea.setSelectionRange(0,1,"none")
     assert_equals(textarea.selectionDirection, "none", 'The direction of the selection must be set to forward if direction is a case-sensitive match for the string "none"');
-  },'textarea setSelectionRange((0,1,"none")');
+  },'textarea setSelectionRange(0,1,"none")');
   test(function() {
     textarea.setSelectionRange(0,1,"hoge")
     assert_equals(textarea.selectionDirection, "none", "otherwise");
-  },'textarea setSelectionRange((0,1,"hoge")');
+  },'textarea setSelectionRange(0,1,"hoge")');
   test(function() {
     textarea.setSelectionRange(0,1,"BACKWARD")
     assert_equals(textarea.selectionDirection, "none", "selectionDirection should be 'none'");
-  },'textarea setSelectionRange((0,1,"BACKWARD")');
+  },'textarea setSelectionRange(0,1,"BACKWARD")');
   test(function() {
     textarea.setSelectionRange(0,1)
     assert_equals(textarea.selectionDirection, "none", "if the argument is omitted");
