--- a/contributors/ttwf_seattle/justh/background-image-007.html
+++ b/contributors/ttwf_seattle/justh/background-image-007.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<title>CSS Backgrounds: background-image p tag</title>
+<title>CSS Backgrounds: background-image :first-letter layered images</title>
 <link rel="author" title="Justin Hill" href="
   http://www.justin-hill.com">
 <link rel="help" href="http://www.w3.org/TR/css3-background/#the-background-image">
 <link rel="match" href="ref/background-image-001-ref.html">
-<meta name="assert" content="Test checks that background-image displays raster image for p tag.">
+<meta name="assert" content="Test checks that background-image displays multiple images in correct order on :first-letter selector.">
 <style>
     .container {
       top:50px;
@@ -13,12 +13,12 @@
       height: 100px;
     }
 
-    .container p {
+    .container p:first-letter {
       width:100px;
       height:100px;
       color:transparent;
       font-size: 50px;
-      background-image: url("green.png");
+      background-image: url("green.png"), url("red.png");
       background-color: red;
       display: block;
       margin: 0px;
