--- a/html/semantics/forms/constraints/form-validation-validity-badInput.html
+++ b/html/semantics/forms/constraints/form-validation-validity-badInput.html
@@ -16,10 +16,10 @@ var testElements = [
       testData: [
         {conditions: {multiple: false, value: ""}, expected: false, name: "[target] The multiple attribute is false and the value attribute is empty"},
         {conditions: {multiple: false, value: "test1@example.com"}, expected: false, name: "[target] The multiple attribute is false and the value attribute is a valid e-mail address"},
-        {conditions: {multiple: false, value: "国际@example.com"}, expected: true, name: "[target] The multiple attribute is false and the value cannot be converted to punycode"},
         {conditions: {multiple: true, value: "test1@example.com,test2@eample.com"}, expected: false, name: "[target] The multiple attribute is true and the value contains valid e-mail addresses"},
-        {conditions: {multiple: true, value: "test,1@example.com"}, expected: true, name: "[target] The multiple attribute is true and the value attribute contains a ','"},
-        {conditions: {multiple: true, value: "国际@example.com"}, expected: true, name: "[target] The multiple attribute is true and the value cannot be converted to punycode"}
+        {conditions: {multiple: true, value: "test,1@example.com"}, expected: true, name: "[target] The multiple attribute is true and the value attribute contains a ','"}
+        //TODO, the value contains characters that cannot be converted to punycode.
+        //Can not find a character that cannot be converted to punycode.
       ]
     },
     {
@@ -35,12 +35,12 @@ var testElements = [
       tag: "input",
       types: ["color"],
       testData: [
-        {conditions: {value: ""}, expected: false, name: "[target] The value attribute is empty"},
+        {conditions: {value: ""}, expected: true, name: "[target] The value attribute is empty"},
         {conditions: {value: "#000000"}, expected: false, name: "[target] The value attribute is a valid sample color"},
         {conditions: {value: "#FFFFFF"}, expected: false, name: "[target] The value attribute is not a valid lowercase sample color"},
         {conditions: {value: "abc"}, expected: true, name: "[target] The value attribute cannot convert to a valid sample color"}
       ]
     },
-  ]; 
+  ];
   validator.run_test (testElements, "badInput");
 </script>
