--- a/webvtt/rendering/cues-with-video/processing-model/dom_override_cue_line.html
+++ b/webvtt/rendering/cues-with-video/processing-model/dom_override_cue_line.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="reftest-wait">
 <title>WebVTT rendering, it is possible to override cue line with the DOM APIs</title>
 <style>
 html { overflow:hidden }
@@ -9,7 +9,7 @@ body { margin:0 }
     color: green
 }
 </style>
-<script src="support/refTestWait.js"></script>
+<script src="/common/reftest-wait.js"></script>
 <script>
     function updateCue() {
         var t = document.getElementById('track');
