--- a/webvtt/rendering/cues-with-video/processing-model/line_-2_wrapped_cue_grow_upwards.html
+++ b/webvtt/rendering/cues-with-video/processing-model/line_-2_wrapped_cue_grow_upwards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="reftest-wait">
 <title>WebVTT rendering, line:-2, size:50%, wrapped cue should grow upwards</title>
 <style>
 html { overflow:hidden }
@@ -9,7 +9,7 @@ body { margin:0 }
     color: green
 }
 </style>
-<script src="support/refTestWait.js"></script>
+<script src="/common/reftest-wait.js"></script>
 <video width="1280" height="720" autoplay onplaying="this.onplaying = null; this.pause(); takeScreenshot();">
     <source src="/media/white.webm" type="video/webm">
     <source src="/media/white.mp4" type="video/mp4">
