--- a/webvtt/rendering/cues-with-video/processing-model/navigate_cue_position-1.html
+++ b/webvtt/rendering/cues-with-video/processing-model/navigate_cue_position-1.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="reftest-wait">
-<title>WebVTT rendering, cue reposition after enabling controls</title>
+<title>WebVTT rendering, cue position after navigation</title>
 <style>
 video {
   outline: solid;
@@ -13,14 +13,10 @@ video {
   color: green;
 }
 </style>
-<script src="/common/reftest-wait.js"></script>
-<video autoplay onplaying="this.onplaying = null;
+<video autoplay controls onplaying="this.onplaying = null;
                            this.pause();
                            this.currentTime = 0;
-                           setTimeout(function(video){
-                             video.controls = true;
-                           }, 100, this);
-                           setTimeout(takeScreenshot, 200);">
+                           ">
   <source src="/media/white.webm" type="video/webm">
   <source src="/media/white.mp4" type="video/mp4">
   <track src=support/foo.vtt>
